--- a/app/src/main/res/layout/adapteroptions.xml
+++ b/app/src/main/res/layout/adapteroptions.xml
@@ -30,13 +30,13 @@
             android:textStyle="bold"
             android:layout_marginEnd="@dimen/_14sdp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/ivTick"
+            app:layout_constraintEnd_toStartOf="@+id/ivUnTick"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="asldkfjalsdkjfaslf" />
 
         <ImageView
-            android:id="@+id/ivTick"
+            android:id="@+id/ivUnTick"
             android:layout_width="@dimen/_12sdp"
             android:layout_height="@dimen/_12sdp"
             android:layout_marginEnd="@dimen/_20sdp"
@@ -44,6 +44,17 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
+        <ImageView
+            android:id="@+id/ivTick"
+            android:layout_width="@dimen/_12sdp"
+            android:layout_height="@dimen/_12sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
+            android:visibility="gone"
+            android:src="@drawable/greencheck"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
